# UrsaEngine

./: CMakeLists.txt
resources/builtin/: base_shader.frag  base_shader.vert
src/: main.cpp
src/core/: Engine.cpp  Engine.h  declarations.h
src/core/logging/: Logging.h
src/core/render/: UGraphicsAPI.h  URenderPipeline.cpp  URenderPipeline.h  URenderer.cpp  URenderer.h  UWindow.h
src/core/render/buffers/: UBufferLayout.cpp  UBufferLayout.h  UIndexBuffer.cpp  UIndexBuffer.h  UVertexBuffer.cpp  UVertexBuffer.h
src/core/render/shaders/: UShaderProgram.cpp  UShaderProgram.h  UShaderType.h  UUniform.h
src/core/resources/: FileReader.cpp  FileReader.h
src/platform/opengl/: UGLObject.h  UGLRenderer.cpp  UGLRenderer.h  UGLWindow.cpp  UGLWindow.h  UOpengGLAPI.cpp  UOpengGLAPI.h
src/platform/opengl/buffer/: UGLIndexBuffer.cpp  UGLIndexBuffer.h  UGLVAO.cpp  UGLVAO.h  UGLVertexBuffer.cpp  UGLVertexBuffer.h
src/platform/opengl/shaders/: UGLShaderProgram.cpp  UGLShaderProgram.h
